--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 				<h1>Traffic over 24 hours</h1>
 			</div>
 			<p class="lead" style="width:80%;margin:0 auto;color:black; text-align: justify">Had so much fun playing with the charts and doing multiple comparisons? Now sit back and relax to watch a paging animation of traffic of 24 hours in a day all over USA. You can see that traffic starts to pile up from 05:00 until 20:00 and California, Northeat, Chicago Texas are the busiest areas. If you want to know detailed information, simply hover above each city dot.</p>
-			<div style="width:800px;height:650px; margin: 0 auto;">
+			<div style="width:800px;height:600px; margin: 0 auto;">
 				<div id='viz1555894883719' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;X3&#47;X3G777Z79&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='path' value='shared&#47;X3G777Z79' /> <param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;X3&#47;X3G777Z79&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1555894883719');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
 				
 			</div>
@@ -252,26 +252,22 @@
 
    <!-- features Section
    ================================================== -->
-	<section id="delay">
+	<section id="delay" style="background-color: white">
 
 		<div class="row section-intro">
    		<div class="col-twelve with-bottom-line">
 
    			<h5>Delay in USA</h5>
-   			<h1>Do you know that everyday in USA, there are 5000 flights delay?</h1>
    		</div>   		
    	</div>
-		
-		 <div style="text-align: center">
-			<h1>WUYEJUN's infographic 2</h1>
+   			 <div style="text-align: center">
+   			 <h4>Do you know that everyday in USA, there are 3605 flights delay?</h4>
 			<img src="images/Infographic2.png"></img>
 		</div>
-		<div style="height:70px"></div>
-		<div style="text-align: center">
+		<div style="text-align: center; padding-top: 40px; padding-bottom: 40px;background-color:#EAEAED">
 			<h1>Chelsea's Tableau 1</h1>
 		</div>
-		<div style="height:70px"></div>
-    <div style="text-align: center">
+    <div style="text-align: center;padding-top: 40px; padding-bottom: 40px;">
       <div>
         <h1>Flight delays over a year of each airline</h1>
         <button onclick="start()" id="start_button">start</button>
@@ -279,12 +275,10 @@
       <p id="chart-delay" style="display: inline-block"></p>
       <p style="text-align: center">Mouseover the date to move forward and backwards through time.</p>
 		</div>
-		<div style="height:70px"></div>
-		<div style="text-align: center">
+		<div style="text-align: center;padding-top: 40px; padding-bottom: 40px;background-color:#EAEAED">
 			<h1>Chelsea's Tableau 2</h1>
 		</div>
-		<div style="height:70px"></div>
-		<div style="text-align: center">
+		<div style="text-align: center;padding-top: 40px; padding-bottom: 40px;">
 			<h1>Chelsea's Tableau 3</h1>
 		</div>
 
