--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
 	   	<nav id="main-nav-wrap">
 				<ul class="main-navigation">
 					<li class="current"><a class="smoothscroll"  href="#intro" title="">Home</a></li>
+					<li><a class="smoothscroll"  href="#reason" title="">Background</a></li>
 					<li><a class="smoothscroll"  href="#process" title="">Traffic</a></li>
 					<li><a class="smoothscroll"  href="#delay" title="">Delay</a></li>
 					<li><a class="smoothscroll"  href="#testimonials" title="">Customer Feedback</a></li>
@@ -175,6 +176,21 @@
 
    </section> <!-- /intro -->
 
+   <section id="reason" style="background-color: white;height:700px">  
+
+   	<div class="row section-intro" style="padding-top:130px" >
+   		<div class="col-twelve with-bottom-line">
+
+   			<h5>Background</h5>
+   		</div>
+   	</div>
+   		<div style="background-color:#EAEAED; height:100%">
+	   		<div style="width:80%; margin:0 10%; text-align: justify;" >
+	   			<p class="lead"> Have you ever wondered which of San Francisco or Los Angeles is a busier airport? Or Have you experienced significant flight delay that made you miss important events? Understanding the curiosity of aviation fans and pain points of frequent flyers who are sensitive to flight delay, we want to create this interactive website for them to make better flight choices to know about flight traffic and avoid flight delay as much as possible. </p>
+	   		</div>
+   		</div>
+   </section>
+
 
    <!-- Process Section
    ================================================== -->
@@ -187,11 +203,8 @@
    		</div>
    	</div>
    		<div style="text-align: center">
-   		<div  style="background-color:#EAEAED">
-   			<p> Paragraph 1
-   		</div>
-   		<div>
-			 <h2>WUYEJUN's infographic</h2>
+   		<div style="padding-top: 30px; padding-bottom: 30px">
+			 <h2>Infographic 1</h2>
 		 </div>
 		 <div></div>
 		 <div style="background-color: #EAEAED;padding-top: 20px; padding-bottom: 30px">
@@ -242,7 +255,7 @@
 			</div>
 			<p class="lead" style="width:80%;margin:0 auto;color:black; text-align: justify">Had so much fun playing with the charts and doing multiple comparisons? Now sit back and relax to watch a paging animation of traffic of 24 hours in a day all over USA. You can see that traffic starts to pile up from 05:00 until 20:00 and California, Northeat, Chicago Texas are the busiest areas. If you want to know detailed information, simply hover above each city dot.</p>
 			<div style="width:800px;height:600px; margin: 0 auto;">
-				<div id='viz1555894883719' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;X3&#47;X3G777Z79&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='path' value='shared&#47;X3G777Z79' /> <param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;X3&#47;X3G777Z79&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1555894883719');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+<div class='tableauPlaceholder' id='viz1556060968281' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Tr&#47;TrafficPerAirportbyHour&#47;TrafficPerAirportbyHour&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='TrafficPerAirportbyHour&#47;TrafficPerAirportbyHour' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Tr&#47;TrafficPerAirportbyHour&#47;TrafficPerAirportbyHour&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1556060968281');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
 				
 			</div>
 			</div>
