--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
    		</div>
    	</div>
    		<div style="text-align: center">
-   		<div style="padding-top: 30px; padding-bottom: 30px">
-			 <h2>Infographic 1</h2>
+   		<div style="padding-top: 30px; padding-bottom: 30px; height:500px">
+			 <p style="font-size: 60px">Infographic 1</p>
 		 </div>
 		 <div></div>
 		 <div style="background-color: #EAEAED;padding-top: 20px; padding-bottom: 30px">
@@ -242,7 +242,7 @@
 					</button>
 					</p>
 			</div>
-			<div style="text-align: center">
+			<div style="text-align: center;">
 					<div id="Both" style="display: none;" align = "center">
 					</div> 
 					<div id='vis-container1' style="display: inline-block" align = "center"></div>
@@ -267,17 +267,17 @@
    ================================================== -->
 	<section id="delay" style="background-color: white">
 
-		<div class="row section-intro">
+   	<div class="row section-intro">
    		<div class="col-twelve with-bottom-line">
 
    			<h5>Delay in USA</h5>
-   		</div>   		
+   		</div>
    	</div>
-   			 <div style="text-align: center">
+   			 <div style="text-align: center;">
    			 <h4>Do you know that everyday in USA, there are 3605 flights delay?</h4>
-			<img src="images/Infographic2.png"></img>
+   			 <img src="images/Infographic2.png"></img></div>
 		</div>
-		<div style="text-align: center; padding-top: 40px; padding-bottom: 40px;background-color:#EAEAED">
+		<div style="text-align: center; padding-top: 40px; padding-bottom: 40px;background-color:#EAEAED; height:500px">
 			<h1>Chelsea's Tableau 1</h1>
 		</div>
     <div style="text-align: center;padding-top: 40px; padding-bottom: 40px;">
@@ -288,10 +288,10 @@
       <p id="chart-delay" style="display: inline-block"></p>
       <p style="text-align: center">Mouseover the date to move forward and backwards through time.</p>
 		</div>
-		<div style="text-align: center;padding-top: 40px; padding-bottom: 40px;background-color:#EAEAED">
+		<div style="text-align: center;padding-top: 40px; padding-bottom: 40px;background-color:#EAEAED;  height:500px">
 			<h1>Chelsea's Tableau 2</h1>
 		</div>
-		<div style="text-align: center;padding-top: 40px; padding-bottom: 40px;">
+		<div style="text-align: center;padding-top: 40px; padding-bottom: 40px; height:500px">
 			<h1>Chelsea's Tableau 3</h1>
 		</div>
 
@@ -303,7 +303,7 @@
 
    <!-- Testimonials Section
    ================================================== -->
-   <section id="testimonials">
+   <section id="testimonials"  style="background-color: #EAEAED">
 
    	<div class="row">
    		<div class="col-twelve">
@@ -353,7 +353,7 @@
                     	<img src="images/avatars/avatar-3.jpg" alt="Author image">
                     	<div class="author-info">
                     		Meimei Han
-                    		<span>Chinese student whol loves USA</span>
+                    		<span>Chinese student who loves USA</span>
                     	</div>
                   </div> 
 
