--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
    	<div class="row">
 
    		<div class="logo">
-	         <a href="index.html">Lhander</a>
+	         <a href="index.html">OmniFlight</a>
 	      </div>
 
 	   	<nav id="main-nav-wrap">
@@ -178,15 +178,17 @@
 
    <section id="reason" style="background-color: white;height:700px">  
 
-   	<div class="row section-intro" style="padding-top:130px" >
-   		<div class="col-twelve with-bottom-line">
+	   	<div class="row section-intro" style="padding-top:130px" >
+	   		<div class="col-twelve with-bottom-line">
 
-   			<h5>Background</h5>
-   		</div>
-   	</div>
+	   			<h5>Background</h5>
+	   		</div>
+	   	</div>
    		<div style="background-color:#EAEAED; height:100%">
+   			<img src = "images/Group.png" style="width:24%; margin:3% 38%"></img>
 	   		<div style="width:80%; margin:0 10%; text-align: justify;" >
-	   			<p class="lead"> Have you ever wondered which of San Francisco or Los Angeles is a busier airport? Or Have you experienced significant flight delay that made you miss important events? Understanding the curiosity of aviation fans and pain points of frequent flyers who are sensitive to flight delay, we want to create this interactive website for them to make better flight choices to know about flight traffic and avoid flight delay as much as possible. </p>
+
+	   			<p class="lead" style="width:60%; margin:1% 20%"> Have you ever wondered which of San Francisco or Los Angeles is a busier airport? Or Have you experienced significant flight delay that made you miss important events? Understanding the curiosity of aviation fans and pain points of frequent flyers who are sensitive to flight delay, we want to create this interactive website for them to make better flight choices to know about flight traffic and avoid flight delay as much as possible. </p>
 	   		</div>
    		</div>
    </section>
@@ -219,7 +221,7 @@
 				<script type='text/javascript'>                    var divElement = document.getElementById('viz1555891880240');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='900px';vizElement.style.height='600px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
 		 </div>
 		</div>
-		<div style="width:80%; margin:0 10%; text-align: justify;">
+		<div style="width:80%; margin:30px 10%; text-align: justify;">
    			<h1 style="text-align:center; color:black">Average Flight Traffic every 10 minutes</h1>
 
    			<p class="lead">Do you know that in 2015, there were 113 flights taking off every 10 minutes in average within USA? And the peak happened in the early morning at 6:00, yes with nearly <b>360 flights taking off  between 6:00 and 6:10 </b>. The next peak is at 7:00 with a little over 300 flights taking off in the next 10 minutes. Speaking of individual cities, Atlanta has a surprising 25.5 flights taking off between 13:40 and 13:50 and that is the most among all cities. Living in San Francisco for many years and not knowing that peak hours of the San Francisco Airport is around 10:40 ? Always curious to find out which one of SF or LA has more traffic? Our chart tells you that the winner is LA.  Want to explore more of traffic for different airlines, and even compare cities under each airline? Now go try with Airline or Tiered dimensions and have fun!</p>
