--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
    			<img src = "images/Group.png" style="width:24%; margin:3% 38%"></img>
 	   		<div style="width:80%; margin:0 10%; text-align: justify;" >
 
-	   			<p class="lead" style="width:60%; margin:1% 20%"> Have you ever wondered which of San Francisco or Los Angeles is a busier airport? Or Have you experienced significant flight delay that made you miss important events? Understanding the curiosity of aviation fans and pain points of frequent flyers who are sensitive to flight delay, we want to create this interactive website for them to make better flight choices to know about flight traffic and avoid flight delay as much as possible. </p>
+	   			<p class="lead" style="width:60%; margin:2% 20%"> Have you ever wondered which of San Francisco or Los Angeles is a busier airport? Or Have you experienced significant flight delay that made you miss important events? Understanding the curiosity of aviation fans and pain points of frequent flyers who are sensitive to flight delay, we want to create this interactive website for them to make better flight choices to know about flight traffic and avoid flight delay as much as possible. </p>
 	   		</div>
    		</div>
    </section>
@@ -196,7 +196,7 @@
 
    <!-- Process Section
    ================================================== -->
-   <section id="process">  
+   <section id="process" style="padding-bottom: 120px">  
 
    	<div class="row section-intro">
    		<div class="col-twelve with-bottom-line">
@@ -209,7 +209,7 @@
 			 <p style="font-size: 60px">Infographic 1</p>
 		 </div>
 		 <div></div>
-		 <div style="background-color: #EAEAED;padding-top: 20px; padding-bottom: 30px">
+		 <div style="background-color: #EAEAED;padding-top: 20px; padding-bottom: 20px">
 		 <div style="width:80%; margin:0 10%; text-align: justify;">
    			<h1 style="text-align:center; color:black">Flight Route Map across USA</h1>
 
@@ -250,12 +250,13 @@
 					<div id='vis-container1' style="display: inline-block" align = "center"></div>
 					<div id='vis-container2' style="display: inline-block" align = "center"></div>
 			</div>
-			<div style="background-color:#EAEAED;padding-top: 30px; padding-bottom: 0px">
+			<div style="background-color:#EAEAED;padding-top: 30px; padding-bottom: 20px">
 
 			<div style="text-align: center">
 				<h1>Traffic over 24 hours</h1>
 			</div>
 			<p class="lead" style="width:80%;margin:0 auto;color:black; text-align: justify">Had so much fun playing with the charts and doing multiple comparisons? Now sit back and relax to watch a paging animation of traffic of 24 hours in a day all over USA. You can see that traffic starts to pile up from 05:00 until 20:00 and California, Northeat, Chicago Texas are the busiest areas. If you want to know detailed information, simply hover above each city dot.</p>
+			<p></p>
 			<div style="width:800px;height:600px; margin: 0 auto;">
 <div class='tableauPlaceholder' id='viz1556060968281' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Tr&#47;TrafficPerAirportbyHour&#47;TrafficPerAirportbyHour&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='TrafficPerAirportbyHour&#47;TrafficPerAirportbyHour' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Tr&#47;TrafficPerAirportbyHour&#47;TrafficPerAirportbyHour&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1556060968281');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
 				
@@ -279,10 +280,19 @@
    			 <h4>Do you know that everyday in USA, there are 3605 flights delay?</h4>
    			 <img src="images/Infographic2.png"></img></div>
 		</div>
-		<div style="text-align: center; padding-top: 40px; padding-bottom: 40px;background-color:#EAEAED; height:500px">
-			<h1>Chelsea's Tableau 1</h1>
+		<div style="text-align: center; padding-top: 40px; padding-bottom: 40px;height:850px">
+			<div style="width:80%; margin:0 10%; text-align: justify;">
+   			<h1 style="text-align:center; color:black">Point-to-Point Delay Around USA </h1>
+
+   			<p class="lead" style="color:black">Paragraph 1 </p>
+
+   			</div>
+   			<div style="width:80%; height: 500px; margin:30px 10%; text-align: justify;">
+
+			<div class='tableauPlaceholder' id='viz1556063836361' style='position: relative'><noscript><a href=' '>< img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Cu&#47;CustomizedSearch2&#47;Sheet3&#47;1_rss.png' style='border: none' /></a ></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='CustomizedSearch2&#47;Sheet3' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Cu&#47;CustomizedSearch2&#47;Sheet3&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1556063836361');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.65)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+			</div>
 		</div>
-    <div style="text-align: center;padding-top: 40px; padding-bottom: 40px;">
+    <div style="text-align: center;padding-top: 40px; padding-bottom: 40px;background-color:#EAEAED; ">
       <div>
         <h1>Flight delays over a year of each airline</h1>
         <button onclick="start()" id="start_button">start</button>
@@ -290,11 +300,26 @@
       <p id="chart-delay" style="display: inline-block"></p>
       <p style="text-align: center">Mouseover the date to move forward and backwards through time.</p>
 		</div>
-		<div style="text-align: center;padding-top: 40px; padding-bottom: 40px;background-color:#EAEAED;  height:500px">
-			<h1>Chelsea's Tableau 2</h1>
-		</div>
-		<div style="text-align: center;padding-top: 40px; padding-bottom: 40px; height:500px">
-			<h1>Chelsea's Tableau 3</h1>
+		<div style="text-align: center;padding-top: 40px; padding-bottom: 40px;  height:850px">
+			<div style="width:80%; margin:0 10%; text-align: justify;">
+	   			<h1 style="text-align:center; color:black">Chelsea's Tableau 2 </h1>
+
+	   			<p class="lead" style="color:black">Paragraph 2 </p>
+   			</div>  
+			<div style="width:80%; height: 500px; margin:30px 10%; text-align: justify;">
+			</div>
+			</div>
+		<div style="text-align: center;padding-top: 40px; padding-bottom: 40px; background-color:#EAEAED;height:780px">
+			<div style="width:80%; margin:0 10%; text-align: justify;">
+	   			<h1 style="text-align:center; color:black">Delay time comparison between airlines and weekday </h1>
+	   			<div style="height:80px">
+	   			<p class="lead"> If you want to book a flight for your next business trip between two cities, and avoid the delay time, we have the information for you! Not only between different airlines but also weekdays. Choose the least busy weekday and airline for you!</p>
+	   			</div>
+				<div style="width:80%; height: 500px; margin:30px 10%; text-align: justify;">
+					<div class='tableauPlaceholder' id='viz1556064283147' style='position: relative'><noscript><a href=' '>< img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;We&#47;Week_15560632206940&#47;Sheet3&#47;1_rss.png' style='border: none' /></a ></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Week_15560632206940&#47;Sheet3' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;We&#47;Week_15560632206940&#47;Sheet3&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1556064283147');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.65)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+				</div>
+
+   			</div>  
 		</div>
 
 
@@ -305,7 +330,7 @@
 
    <!-- Testimonials Section
    ================================================== -->
-   <section id="testimonials"  style="background-color: #EAEAED">
+   <section id="testimonials">
 
    	<div class="row">
    		<div class="col-twelve">
