--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 	      </div>
 
 	   	<nav id="main-nav-wrap">
-				<ul class="main-navigation">
+				<ul class="main-navigation" >
 					<li class="current"><a class="smoothscroll"  href="#intro" title="">Home</a></li>
 					<li><a class="smoothscroll"  href="#reason" title="">Background</a></li>
 					<li><a class="smoothscroll"  href="#process" title="">Traffic</a></li>
@@ -148,13 +148,12 @@
 
    	<div class="intro-content">
    		<div class="row">
+   			<div style="margin-left:47%; margin-top:-6%">
 
-   			<div class="col-twelve">
+	   			<h5  style="text-align: left; color:#FFD700">Welcome to OmniFlight.</h5>
+	   			<h1 style="text-align: left">Understand Flight Traffic and Delays in the US.</h1>
 
-	   			<h5>Welcome to OmniFlight.</h5>
-	   			<h1 >We will help you understand more flight traffic and delay in USA.</h1>
-
-	   			<a class="button stroke smoothscroll" href="#process" title="">Learn More</a>
+	   			<a class="button stroke smoothscroll" href="#reason" title="" style="margin-left: -55%">Start the journey</a>
 
 	   		</div>  
    			
